Update source code for compiling